hacky but working fix to linebreak in data text box

--- a/bn-filter-app/src/styles/App.css
+++ b/bn-filter-app/src/styles/App.css
@@ -1,6 +1,6 @@
 .App {
     text-align: center;
-    min-width: 500px;
+    min-width: 600px;
     font-family: "Roboto", "Helvetica", "Arial", sans-serif;
 }
 
